성적확인일정 구조 수정